# ChangeLog for sys-apps/coreutils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.182 2006/11/04 13:41:46 jer Exp $

  04 Nov 2006; Jeroen Roovers <jer@gentoo.org> coreutils-6.4.ebuild:
  Stable for HPPA (bug #144467).

  01 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> coreutils-6.4.ebuild:
  Stable on amd64/x86 wrt bug #144467.

*coreutils-6.4 (23 Oct 2006)

  23 Oct 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.4.ebuild:
  Version bump.

*coreutils-6.3 (30 Sep 2006)

  30 Sep 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.3.ebuild:
  Version bump.

*coreutils-6.2 (18 Sep 2006)

  18 Sep 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.2.ebuild:
  Version bump.

  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.97.ebuild,
  coreutils-6.1.ebuild:
  Backport the kernel_linux fix to 5.97 and drop keyword from 6.1 as it
  doesn't build right now.

  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-6.1.ebuild:
  Remove kernel_linux conditional for acl and attr, acl can be use.masked for
  this package on non-linux profiles now.

*coreutils-6.1 (20 Aug 2006)

  20 Aug 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.1.ebuild:
  Version bump.

  06 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild,
  coreutils-5.97.ebuild:
  Drop keyword from old version, and make acl deps being actual dep only on
  Linux. *BSD does not require those deps although acl works fine.

*coreutils-5.97 (25 Jun 2006)

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-5.97.ebuild:
  Version bump.

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild:
  Restrict confcache as per bug #134459.

  23 May 2006; Diego Pettenò <flameeyes@gentoo.org> coreutils-5.96.ebuild:
  Add ~x86-fbsd keyword. Change strategy for non-GNU userlands, instead of