@@ -18,14 +18,14 @@ EBUILD coreutils-5.94-r3.ebuild 4929 RMD160 6e0929ce4945433aa4b465673c80c5a9878c
 MD5 8c474346db64891a3fbf0e20d92df21d coreutils-5.94-r3.ebuild 4929
 RMD160 6e0929ce4945433aa4b465673c80c5a9878c9dcf coreutils-5.94-r3.ebuild 4929
 SHA256 1336bc0691f882ce770d472fb08af08e86f30ecf00d78db92d6482f78193c22c coreutils-5.94-r3.ebuild 4929
-EBUILD coreutils-6.4.ebuild 4635 RMD160 e053ef4f37e29bd65044cbc84eedb5daab358405 SHA1 cac6d6126b374c08813ac9810b957c82d013129e SHA256 4baa5a28dd158ba3b01941bcb94eb7e0d3c708481eddb3195a7658780a931b7e
-MD5 085f600058263942d8ecb787b35187d4 coreutils-6.4.ebuild 4635
-RMD160 e053ef4f37e29bd65044cbc84eedb5daab358405 coreutils-6.4.ebuild 4635
-SHA256 4baa5a28dd158ba3b01941bcb94eb7e0d3c708481eddb3195a7658780a931b7e coreutils-6.4.ebuild 4635
-MISC ChangeLog 28694 RMD160 0a667aeedd5a58708b3b9de9168cac7aeb7f100c SHA1 52446f4462d47017ef081c8c73861065c30035b2 SHA256 3363e9c839cf0aadcc50554f951fd6c0ed57f0f3c91ce8f39b30711966940b19
-MD5 f70c845bf6082f3b45c8decfd7806069 ChangeLog 28694
-RMD160 0a667aeedd5a58708b3b9de9168cac7aeb7f100c ChangeLog 28694
-SHA256 3363e9c839cf0aadcc50554f951fd6c0ed57f0f3c91ce8f39b30711966940b19 ChangeLog 28694
+EBUILD coreutils-6.4.ebuild 4685 RMD160 a860f27835ca1b54ae88fc0e62970a6998624372 SHA1 27394d1e4cbf453b5a8225256ea605d986268cba SHA256 0a2e9cf93e6824f2ccfb9879da4ec1925788e2ae51a40b2536ac05d0e38a6171
+MD5 bffdf46c71d83df353c7708523e9026c coreutils-6.4.ebuild 4685
+RMD160 a860f27835ca1b54ae88fc0e62970a6998624372 coreutils-6.4.ebuild 4685
+SHA256 0a2e9cf93e6824f2ccfb9879da4ec1925788e2ae51a40b2536ac05d0e38a6171 coreutils-6.4.ebuild 4685
+MISC ChangeLog 28806 RMD160 7d7982329e037a3f857eb49bd8a21f6f2b6d279a SHA1 1a68bb1ae92c71768a51027333bba5b02029df4b SHA256 ace8669f62ad6c2d92ae1518b385f5af9cd1a46e1561f005c2ac049918e4ee0d
+MD5 8aac16a20a8327a83d46fa764776cac7 ChangeLog 28806
+RMD160 7d7982329e037a3f857eb49bd8a21f6f2b6d279a ChangeLog 28806
+SHA256 ace8669f62ad6c2d92ae1518b385f5af9cd1a46e1561f005c2ac049918e4ee0d ChangeLog 28806
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
