@@ -1,9 +1,11 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-6.4.ebuild,v 1.5 2006/11/04 13:41:46 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-6.4.ebuild,v 1.7 2006/11/07 19:14:53 gustavoz Exp $
 
 EAPI="prefix"
 
+WANT_AUTOCONF="latest"
+WANT_AUTOMAKE="latest"
 inherit eutils flag-o-matic toolchain-funcs autotools
 
 PATCH_VER="1.0"
@@ -19,6 +21,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc-macos ~x86 ~x86-macos"
 IUSE="acl nls selinux static"
+RESTRICT="confcache"
 
 RDEPEND="selinux? ( sys-libs/libselinux )
 	acl? ( sys-apps/acl sys-apps/attr )
@@ -30,8 +33,6 @@ DEPEND="${RDEPEND}
 	>=sys-devel/autoconf-2.59d
 	>=sys-devel/m4-1.4-r1
 	sys-apps/help2man"
-
-RESTRICT="confcache"
 
 pkg_setup() {
 	# fixup expr for #123342 (rely on path)
