@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.182 2006/11/04 13:41:46 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.183 2006/11/07 19:14:53 gustavoz Exp $
+
+  07 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> coreutils-6.4.ebuild:
+  Stable on sparc wrt #144467
 
   04 Nov 2006; Jeroen Roovers <jer@gentoo.org> coreutils-6.4.ebuild:
   Stable for HPPA (bug #144467).
